添加维护锚点单详细成交记录：1)开仓/平仓每笔成交明细 2)总费用和费率计算 3)TG通知 4)前端详情按钮

--- a/auto_maintenance_config.json
+++ b/auto_maintenance_config.json
@@ -1,6 +1,6 @@
 {
-  "auto_maintain_long_enabled": false,
-  "auto_maintain_short_enabled": false,
+  "auto_maintain_long_enabled": true,
+  "auto_maintain_short_enabled": true,
   "loss_threshold": -10,
   "margin_min": 0.6,
   "margin_max": 1.0,
