--- a/auto_maintenance_config.json
+++ b/auto_maintenance_config.json
@@ -1,7 +1,7 @@
 {
   "auto_maintain_long_enabled": true,
   "auto_maintain_short_enabled": true,
-  "super_maintain_long_enabled": false,
+  "super_maintain_long_enabled": true,
   "super_maintain_short_enabled": false,
   "loss_threshold": -10,
   "margin_min": 0.6,
