新增子账户超级维护开关：添加多单/空单独立开关，支持前端实时控制，维护守护进程响应开关状态

--- a/sub_account_config.json
+++ b/sub_account_config.json
@@ -7,6 +7,8 @@
       "secret_key": "4C2BD2AC6A08615EA7F36A6251857FCE",
       "passphrase": "Wu666666.",
       "enabled": true,
+      "super_maintain_long_enabled": false,
+      "super_maintain_short_enabled": false,
       "maintenance_config": {
         "max_maintenance_count": 3,
         "loss_threshold": -10,
