修复子账户开仓重复问题：添加本地持仓记录跟踪，避免因API 401错误导致的重复开仓

--- a/sub_account_config.json
+++ b/sub_account_config.json
@@ -22,5 +22,7 @@
   "main_account": {
     "account_name": "JAMESYI",
     "enabled": true
-  }
+  },
+  "super_maintain_long_enabled": true,
+  "super_maintain_short_enabled": true
 }
