添加锚点单底仓保护机制
核心功能: 防止锚点单被完全平掉，确保至少保留0.6U以上的底仓

1. 配置更新:
   - anchor_config.json: 添加min_keep_margin=0.6配置
   - anchor_maintenance_daemon.py: 将保留保证金从2U改为0.6U
   - 添加MIN_KEEP_MARGIN常量定义

2. 核心保护模块:
   - 创建position_close_guard.py平仓保护模块
   - calculate_safe_close_size(): 计算安全平仓量
   - validate_close_request(): 验证平仓请求是否安全
   - 自动调整超出范围的平仓请求

3. API接口保护:
   - app_new.py/close_sub_account_position: 集成底仓保护
   - 平仓前获取实时持仓信息
   - 自动验证并调整平仓数量
   - 保护触发时记录警告信息

4. 安全机制:
   - 完全平仓请求自动调整为保留0.6U
   - 保留保证金不足0.6U时自动调整
   - 小持仓也会被保护
   - 测试用例验证保护逻辑

使用场景:
- 锚点维护平仓
- 子账户平仓
- 手动平仓API调用
- 所有可能导致完全平仓的操作

--- a/anchor_config.json
+++ b/anchor_config.json
@@ -12,7 +12,9 @@
       "check_add_position": true,
       "add_position_trigger": -10.0,
       "min_amount_handling": "dynamic",
-      "prevent_duplicate_minutes": 5
+      "prevent_duplicate_minutes": 5,
+      "min_keep_margin": 0.6,
+      "min_keep_margin_description": "平仓时必须保留的最小保证金（USDT），防止锚点单被完全平掉"
     },
     "target_coins": [
       "CFX",
