🚀 新增实时自动维护守护进程: 基于Flask API检测持仓并触发维护
新功能:
- anchor_maintenance_realtime_daemon.py: 实时从Flask API获取持仓数据
- 使用AnchorMaintenanceManager进行维护逻辑判断
- 检测间隔60秒
- 自动记录维护日志到anchor_maintenance_logs表
- 去掉is_anchor判断，只要开启开关就维护所有亏损>=10%的持仓
- 余额控制逻辑: 维护后保证金控制在0.6U-1.1U范围内

修复:
- 修复get_current_positions函数以支持Flask API的返回格式

测试:
- 成功检测到CRO(-12.80%)和UNI(-10.56%)需要维护

--- a/auto_maintenance_config.json
+++ b/auto_maintenance_config.json
@@ -1,8 +1,8 @@
 {
   "auto_maintain_long_enabled": true,
   "auto_maintain_short_enabled": true,
-  "super_maintain_long_enabled": true,
-  "super_maintain_short_enabled": true,
+  "super_maintain_long_enabled": false,
+  "super_maintain_short_enabled": false,
   "loss_threshold": -10,
   "margin_min": 0.6,
   "margin_max": 1.0,
