修复前端极值显示：在持仓表格中添加极值列，显示最高盈利率和最大亏损率

--- a/auto_maintenance_config.json
+++ b/auto_maintenance_config.json
@@ -1,6 +1,6 @@
 {
-  "auto_maintain_long_enabled": true,
-  "auto_maintain_short_enabled": true,
+  "auto_maintain_long_enabled": false,
+  "auto_maintain_short_enabled": false,
   "super_maintain_long_enabled": false,
   "super_maintain_short_enabled": false,
   "loss_threshold": -10,
