--- a/sub_account_config.json
+++ b/sub_account_config.json
@@ -23,6 +23,6 @@
     "account_name": "JAMESYI",
     "enabled": true
   },
-  "super_maintain_long_enabled": true,
-  "super_maintain_short_enabled": true
+  "super_maintain_long_enabled": false,
+  "super_maintain_short_enabled": false
 }
