--- a/sub_account_config.json
+++ b/sub_account_config.json
@@ -24,5 +24,7 @@
     "enabled": true
   },
   "super_maintain_long_enabled": false,
-  "super_maintain_short_enabled": false
+  "super_maintain_short_enabled": false,
+  "follow_short_loss_enabled": true,
+  "follow_long_loss_enabled": false
 }
