修复Google Drive检测器配置并批量导入今天所有TXT数据
问题：
- Google Drive检测器配置文件日期为2026-01-01，但今天是2026-01-02
- 导致检测器使用默认文件夹ID，找不到今天的TXT文件
- 只显示旧的2025-12-09数据

解决方案：
1. 运行auto_update_today_folder.py更新配置
   - 扫描父文件夹1j8YV6KysUCmgcmASFOxztWWIE1Vq-kYV
   - 找到今天的文件夹：2026-01-02
   - 新文件夹ID：1RUqLfvCPC0lwvgr9xW3Alj2cHLCxFhtp
   - 找到104个TXT文件

2. 修改batch_import_daily_txt.py数据库路径
   - 旧路径：/home/user/webapp/crypto_data.db
   - 新路径：/home/user/webapp/databases/crypto_data.db
   - 与gdrive-detector保持一致

3. 批量导入今天所有TXT数据
   - 总文件数：104个
   - 成功导入：96条新数据
   - 已存在：1条
   - 无效数据：7条（急涨急跌均为0）

4. 重启gdrive-detector服务
   - 使用新配置
   - 正常检测今天的文件
   - 最新文件：2026-01-02_1717.txt

技术细节：
- 配置文件：daily_folder_config.json
- 自动更新脚本：auto_update_today_folder.py
- 批量导入脚本：batch_import_daily_txt.py
- 数据库：databases/crypto_data.db
- 表：crypto_snapshots, crypto_coin_data

使用说明：
- 每天需要运行auto_update_today_folder.py更新文件夹配置
- 如果发现数据缺失，运行batch_import_daily_txt.py补充
- gdrive-detector服务会自动检测新文件并导入

结果验证：
✅ 配置已更新到2026-01-02
✅ 找到104个今天的TXT文件
✅ 成功导入96条新数据
✅ gdrive-detector正常工作

--- a/daily_folder_config.json
+++ b/daily_folder_config.json
@@ -1,12 +1,17 @@
 {
   "root_folder_odd": "1j8YV6KysUCmgcmASFOxztWWIE1Vq-kYV",
   "root_folder_even": "1j8YV6KysUCmgcmASFOxztWWIE1Vq-kYV",
-  "current_date": "2026-01-01",
-  "folder_id": "1Xkbyii7uirF-5f6aqrk67C1zxKAbTIJC",
+  "current_date": "2026-01-02",
+  "folder_id": "1RUqLfvCPC0lwvgr9xW3Alj2cHLCxFhtp",
   "parent_folder_id": "1j8YV6KysUCmgcmASFOxztWWIE1Vq-kYV",
   "updated_at": "2025-12-26 00:41:06",
   "update_reason": "每日00:10自动更新到新日期文件夹",
-  "folder_name": "2026-01-01",
+  "folder_name": "2026-01-02",
   "auto_updated": true,
-  "auto_update_time": "2026-01-01 00:10:12"
+  "auto_update_time": "2026-01-02 17:19:44",
+  "last_updated": "2026-01-02 17:19:44",
+  "parent_folder_url": "https://drive.google.com/drive/folders/1j8YV6KysUCmgcmASFOxztWWIE1Vq-kYV?usp=sharing",
+  "auto_update_status": "success",
+  "txt_count": 104,
+  "latest_txt": "2026-01-02_1717.txt"
 }
