feat: 逃顶信号记录添加市场强度等级 - 下跌强度和上涨强度同步记录和显示

--- a/sub_account_config.json
+++ b/sub_account_config.json
@@ -24,7 +24,7 @@
     "enabled": true
   },
   "super_maintain_long_enabled": false,
-  "super_maintain_short_enabled": true,
-  "follow_short_loss_enabled": true,
-  "follow_long_loss_enabled": true
+  "super_maintain_short_enabled": false,
+  "follow_short_loss_enabled": false,
+  "follow_long_loss_enabled": false
 }
