feat: 添加保护交易对功能
- 新增 protect_pairs_daemon.py 守护进程
- 每分钟检查主账户交易对数量
- 发现交易对减少时自动补1U保证金仓位
- 前端添加🛡️保护交易对开关
- 配置文件添加 protect_pairs_enabled 字段
- API 支持保护交易对配置的读取和保存

--- a/sub_account_config.json
+++ b/sub_account_config.json
@@ -26,5 +26,11 @@
   "super_maintain_long_enabled": false,
   "super_maintain_short_enabled": false,
   "follow_short_loss_enabled": false,
-  "follow_long_loss_enabled": false
+  "follow_long_loss_enabled": false,
+  "protect_pairs_enabled": false,
+  "protect_pairs_config": {
+    "check_interval": 60,
+    "min_margin_usdt": 1,
+    "protected_pairs": []
+  }
 }
