fix: 修复两个关键问题
1. 修复逃顶信号统计逻辑
   - 从统计总和改为统计满足条件的快照数量
   - 条件：scenario_3 + scenario_4 >= 5
   - 现在数据正确：668/106 而不是之前错误的 12980/1733

2. 将保护交易对功能移到主账户
   - 从子账户配置移除保护交易对
   - 添加到主账户配置 anchor_config.json
   - 新增 /api/anchor-system/protect-pairs-config API
   - 前端开关从子账户面板移到主账户面板
   - 守护进程使用主账户配置和凭证

--- a/anchor_config.json
+++ b/anchor_config.json
@@ -36,6 +36,13 @@
     "only_short_positions": false,
     "trade_mode": "real"
   },
+  "protect_pairs": {
+    "enabled": false,
+    "check_interval": 60,
+    "min_margin_usdt": 1,
+    "protected_pairs": [],
+    "description": "保护交易对功能：监控主账户交易对数量，自动补仓丢失的交易对"
+  },
   "telegram": {
     "bot_token": "8437045462:AAFePnwdC21cqeWhZISMQHGGgjmroVqE2H0",
     "chat_id": "-1003227444260"
