fix: 修复保护交易对守护进程无法加载API凭证的问题
- 从 okex_api_config.py 导入API凭证，而不是读取不存在的 credentials.json
- 守护进程现在可以正常工作
- 已成功初始化保护列表：27个交易对
- 包括：AAVE, CRO, TAO, CFX, TON, LINK, BNB, UNI, DOT, LDO等

--- a/anchor_config.json
+++ b/anchor_config.json
@@ -37,10 +37,38 @@
     "trade_mode": "real"
   },
   "protect_pairs": {
-    "enabled": false,
+    "enabled": true,
     "check_interval": 60,
     "min_margin_usdt": 1,
-    "protected_pairs": [],
+    "protected_pairs": [
+      "AAVE-USDT-SWAP_long",
+      "CRO-USDT-SWAP_short",
+      "TAO-USDT-SWAP_short",
+      "CFX-USDT-SWAP_long",
+      "TON-USDT-SWAP_short",
+      "LINK-USDT-SWAP_short",
+      "BNB-USDT-SWAP_short",
+      "UNI-USDT-SWAP_short",
+      "DOT-USDT-SWAP_short",
+      "LDO-USDT-SWAP_long",
+      "STX-USDT-SWAP_long",
+      "CFX-USDT-SWAP_short",
+      "DOT-USDT-SWAP_long",
+      "LDO-USDT-SWAP_short",
+      "HBAR-USDT-SWAP_short",
+      "UNI-USDT-SWAP_long",
+      "APT-USDT-SWAP_short",
+      "CRO-USDT-SWAP_long",
+      "XLM-USDT-SWAP_long",
+      "STX-USDT-SWAP_short",
+      "CRV-USDT-SWAP_long",
+      "CRV-USDT-SWAP_short",
+      "XLM-USDT-SWAP_short",
+      "BCH-USDT-SWAP_short",
+      "FIL-USDT-SWAP_short",
+      "SOL-USDT-SWAP_short",
+      "FIL-USDT-SWAP_long"
+    ],
     "description": "保护交易对功能：监控主账户交易对数量，自动补仓丢失的交易对"
   },
   "telegram": {
