feat: 添加子账户最大持仓数限制
- 每个子账户最多持有10个交易对
- 在手动开仓API中检查持仓数
- 在自动开仓守护进程中检查持仓数
- 配置文件添加max_positions字段（默认10）
- 超过限制时拒绝新开仓

--- a/sub_account_config.json
+++ b/sub_account_config.json
@@ -16,7 +16,8 @@
         "buy_amount_usdt": 100,
         "keep_margin_usdt": 10,
         "initial_position_usdt": 10
-      }
+      },
+      "max_positions": 10
     }
   ],
   "main_account": {
@@ -26,5 +27,6 @@
   "super_maintain_long_enabled": false,
   "super_maintain_short_enabled": false,
   "follow_short_loss_enabled": false,
-  "follow_long_loss_enabled": false
+  "follow_long_loss_enabled": false,
+  "default_max_positions": 10
 }
