fix: 添加bias_statistics字段

--- a/anchor_config.json
+++ b/anchor_config.json
@@ -45,24 +45,28 @@
       "CRO-USDT-SWAP_short",
       "TAO-USDT-SWAP_short",
       "CFX-USDT-SWAP_long",
+      "AAVE-USDT-SWAP_short",
       "TON-USDT-SWAP_short",
       "LINK-USDT-SWAP_short",
       "BNB-USDT-SWAP_short",
       "UNI-USDT-SWAP_short",
       "DOT-USDT-SWAP_short",
       "LDO-USDT-SWAP_long",
-      "STX-USDT-SWAP_long",
       "CFX-USDT-SWAP_short",
+      "STX-USDT-SWAP_long",
+      "DOGE-USDT-SWAP_short",
       "DOT-USDT-SWAP_long",
       "LDO-USDT-SWAP_short",
       "HBAR-USDT-SWAP_short",
       "UNI-USDT-SWAP_long",
       "APT-USDT-SWAP_short",
       "CRO-USDT-SWAP_long",
+      "XRP-USDT-SWAP_short",
       "XLM-USDT-SWAP_long",
       "STX-USDT-SWAP_short",
       "CRV-USDT-SWAP_long",
       "CRV-USDT-SWAP_short",
+      "NEAR-USDT-SWAP_short",
       "XLM-USDT-SWAP_short",
       "BCH-USDT-SWAP_short",
       "FIL-USDT-SWAP_short",
